<resources>
    <string name="app_name">English Guru</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">Test</string>
    <string name="show_answer">Show answer</string>
    <string name="learn">Learn</string>
    <string name="again">Again</string>
    <string name="hard">Hard</string>
    <string name="good">Good</string>
    <string name="easy">Easy</string>
    <string name="words">Word</string>
    <string name="definition">Definition</string>
    <string name="examples">Examples</string>
    <string name="synonyms">Synonyms</string>
    <string name="part_of_speech">Part of speech</string>
    <string name="similar_to">Similar to</string>
    <string name="derivation">Derivation</string>
    <string name="next_word">Next word</string>
    <string name="type_to_translate">Type to translate</string>
    <string name="translate">Translate</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="translator">Translator</string>
    <string name="logo_description">Improve your vocabulary</string>
    <string name="swap_languages_pic">swap_languages_pic</string>
    <string name="brain_icon">Brain icon</string>
    <string name="chat_bot">Chat Bot</string>

    <string-array name="lang_array">
        <item>English</item>
        <item>Russian</item>
        <item>German</item>
        <item>Uzbek</item>
        <item>French</item>
        <item>Spain</item>
        <item>Hindi</item>
        <item>Turkish</item>
        <item>Ukrainian</item>
        <item>Czech</item>
    </string-array>

    <string name="chat_label">Message</string>
    <string name="action_send">Send</string>
    <string name="action_mic">Microphone</string>

</resources>