<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

    <com.google.android.material.button.MaterialButton
        android:id="@+id/againBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cornerRadius="0dp"
        android:layout_weight="1"
        android:backgroundTint="#E52EE1"
        android:text="@string/again"
        android:clickable="true"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:insetLeft="0dp"
        android:insetRight="0dp"
        android:focusable="true"
        android:fontFamily="@font/product_sans_regular"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/hardBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cornerRadius="0dp"
        android:layout_weight="1"
        android:backgroundTint="#DC670F"
        android:text="@string/hard"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:insetLeft="0dp"
        android:insetRight="0dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/product_sans_regular"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/goodBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:backgroundTint="#3AB6BA"
        android:clickable="true"
        android:focusable="true"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:insetLeft="0dp"
        android:insetRight="0dp"
        android:fontFamily="@font/product_sans_regular"
        android:text="@string/good"
        app:cornerRadius="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/easyBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cornerRadius="0dp"
        android:layout_weight="1"
        android:backgroundTint="#59C531"
        android:text="@string/easy"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:insetLeft="0dp"
        android:insetRight="0dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/product_sans_regular"
        />

</LinearLayout>