<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".app.features.main.MainActivity">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_marginTop="50dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/brain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/logoHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/product_sans_bold"
        android:textSize="40sp"
        android:layout_margin="10dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImage" />

    <TextView
        android:id="@+id/logoDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logo_description"
        android:fontFamily="@font/product_sans_regular"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="5dp"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoHeader" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/vocabularyButton"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/vocabulary"
        android:textColor="@color/white"
        android:layout_marginTop="70dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="30sp"
        android:fontFamily="@font/product_sans_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoDescription" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/translatorButton"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/translator"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="30sp"
        android:fontFamily="@font/product_sans_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vocabularyButton" />


</androidx.constraintlayout.widget.ConstraintLayout>