<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/wordCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <LinearLayout
                    android:id="@+id/wordsBlock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:drawablePadding="5dp"
                        android:fontFamily="@font/product_sans_bold"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        android:textSize="16sp"
                        android:text="@string/words"
                        app:drawableTint="#E52EE1"
                        app:drawableStartCompat="@drawable/baseline_circle_24" />

                    <TextView
                        android:id="@+id/word"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Example"
                        android:fontFamily="@font/product_sans_regular"
                        android:textColor="#777777"
                        android:textSize="18sp"
                        android:layout_margin="20dp"
                        android:textAppearance="?attr/textAppearanceTitleMedium"

                        />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/definitionCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/wordCard"
                >

                <LinearLayout
                    android:id="@+id/definitionBlock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:drawablePadding="5dp"
                        android:fontFamily="@font/product_sans_bold"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        android:textSize="16sp"
                        android:text="@string/definition"
                        app:drawableStartCompat="@drawable/baseline_circle_24"
                        app:drawableTint="#3AB6BA" />

                    <TextView
                        android:id="@+id/definition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Example"
                        android:fontFamily="@font/product_sans_regular"
                        android:textColor="#777777"
                        android:textSize="18sp"
                        android:layout_margin="20dp"
                        android:textAppearance="?attr/textAppearanceTitleMedium"

                        />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/examplesCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/definitionCard"
                >

                <LinearLayout
                    android:id="@+id/examplesBlock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:drawablePadding="5dp"
                        android:fontFamily="@font/product_sans_bold"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        android:textSize="16sp"
                        android:text="@string/examples"
                        app:drawableStartCompat="@drawable/baseline_circle_24"
                        app:drawableTint="#0B16E5" />

                    <TextView
                        android:id="@+id/examples"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Example"
                        android:fontFamily="@font/product_sans_regular"
                        android:textColor="#777777"
                        android:textSize="18sp"
                        android:layout_margin="20dp"
                        android:textAppearance="?attr/textAppearanceTitleMedium"

                        />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/synonymsCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/examplesCard"
                >

                <LinearLayout
                    android:id="@+id/synonymsBlock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:drawablePadding="5dp"
                        android:fontFamily="@font/product_sans_bold"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        android:textSize="16sp"
                        android:text="@string/synonyms"
                        app:drawableStartCompat="@drawable/baseline_circle_24"
                        app:drawableTint="#59C531" />

                    <TextView
                        android:id="@+id/synonyms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Example"
                        android:fontFamily="@font/product_sans_regular"
                        android:textColor="#777777"
                        android:textSize="18sp"
                        android:layout_margin="20dp"
                        android:textAppearance="?attr/textAppearanceTitleMedium"

                        />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/partOfSpeechCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/synonymsCard"
                >

                <LinearLayout
                    android:id="@+id/partOfSpeechBlock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:drawablePadding="5dp"
                        android:fontFamily="@font/product_sans_bold"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        android:textSize="16sp"
                        android:text="@string/part_of_speech"
                        app:drawableStartCompat="@drawable/baseline_circle_24"
                        app:drawableTint="#DEE50B" />

                    <TextView
                        android:id="@+id/partOfSpeech"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Example"
                        android:fontFamily="@font/product_sans_regular"
                        android:textColor="#777777"
                        android:textSize="18sp"
                        android:layout_margin="20dp"
                        android:textAppearance="?attr/textAppearanceTitleMedium"

                        />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/similarToCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/partOfSpeechCard"
                >

                <LinearLayout
                    android:id="@+id/similarToBlock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:drawablePadding="5dp"
                        android:fontFamily="@font/product_sans_bold"
                        android:text="@string/similar_to"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        android:textSize="16sp"
                        app:drawableStartCompat="@drawable/baseline_circle_24"
                        app:drawableTint="#DC670F" />

                    <TextView
                        android:id="@+id/similarTo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Example"
                        android:fontFamily="@font/product_sans_regular"
                        android:textColor="#777777"
                        android:textSize="18sp"
                        android:layout_margin="20dp"
                        android:textAppearance="?attr/textAppearanceTitleMedium"

                        />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/derivationCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/similarToCard"
                >

                <LinearLayout
                    android:id="@+id/derivationBlock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:drawablePadding="5dp"
                        android:fontFamily="@font/product_sans_bold"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        android:textSize="16sp"
                        android:text="@string/derivation"
                        app:drawableStartCompat="@drawable/baseline_circle_24"
                        app:drawableTint="#0B8EE5" />

                    <TextView
                        android:id="@+id/derivation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Example"
                        android:fontFamily="@font/product_sans_regular"
                        android:textColor="#777777"
                        android:textSize="18sp"
                        android:layout_margin="20dp"
                        android:textAppearance="?attr/textAppearanceTitleMedium"

                        />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>